# staffer

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  ee-ingestion-architecture.md  ee-query-architecture.md  eval-slice-prompt.md  pyproject.toml  pyrightconfig.json  query-slice-prompts.md
.claude/: settings.json
.claude/commands/: handoff-index.md  handoff.md
.github/: pull_request_template.md
config/: default.yaml  taxonomy.yaml
config/prompts/: candidate_scoring.md  clarify_role.md  feedback_extraction.md  near_miss_rationale.md  profile_extraction.md  role_clarification.md  role_intake.md  score_candidate.md
data/: README.md  demand-supply.xlsx
docs/: backlog.md  decision.md  ownership.md  product.md  progress.A.md  progress.B.md  progress.C.md  progress.md  structure.md  tech.md
dsm/: compile.py  config.py  models.py  observability.py
dsm/cli/: candidate_store.py  commands.py  main.py  store.py
dsm/eval/: README.md  cases.py  fairness.py  faithfulness.py  golden_set.py  guardrail_validation.py  hardening_fixtures.py  invariants.py  nl_intake_golden.py  record.py  red_team.py  retrieval_quality.py
dsm/guardrails/: __init__.py  input_guard.py  narrative_guard.py  output_guard.py
dsm/index/: build.py  embed_client.py  indexer.py  milvus_store.py  models.py  retrieve.py  stub.py  text_builder.py
dsm/ingest/: blobstore.py  enrich.py  enrich_cache.py  goldstore.py  land.py  lineage.py  manifest.py  merge.py  models.py  reconcile.py  sheets.py  silver.py  stub.py  taxonomy.py
dsm/ingest/parse/: __init__.py  csv.py  markdown.py  pdf.py
dsm/match/: clarify.py  demand.py  freshness.py  gates.py  intake.py  models.py  rank.py  score.py
dsm/pii/: leakscan.py  pseudonymised_lm.py  redact.py  stub.py  vault.py
dsm/web/: __init__.py  app.py  jobs.py  models.py  service.py  supply.py
dsm/web/static/: index.html
modal/: embedder.py
scripts/: decisions_status.py
specs/000-foundation/: design.md  requirements.md  tasks.md
specs/a-001-ingest-landing-parse/: design.md  requirements.md  tasks.md
specs/a-001-ingest-sheets/: design.md  requirements.md  tasks.md
specs/a-002-ingest-silver-identity/: design.md  requirements.md  tasks.md
specs/a-003-ingest-enrich-gold/: design.md  requirements.md  tasks.md
specs/a-004-modal-embed-rerank/: design.md  requirements.md  tasks.md
specs/a-005-index-upsert/: design.md  requirements.md  tasks.md
specs/b-001-clarify/: design.md  requirements.md  tasks.md
specs/b-001-query-deterministic/: design.md  requirements.md  tasks.md
specs/b-002-query-orchestration/: design.md  requirements.md  tasks.md
specs/b-002-query-scoring-orchestration/: design.md  requirements.md  tasks.md
specs/b-003-human-readable-shortlist/: design.md  requirements.md  tasks.md
specs/b-004-near-miss-skill-verdict/: design.md  requirements.md  tasks.md
specs/c-001-gates-rank/: design.md  requirements.md  tasks.md
specs/c-002-query-eval-harness/: design.md  requirements.md  tasks.md
specs/c-003-pseudonymised-lm-boundary/: design.md  requirements.md  tasks.md
specs/c-004-ai-eval-layer/: design.md  requirements.md  tasks.md
specs/c-006-nl-query-intake/: design.md  requirements.md  tasks.md
specs/c-007-query-negation/: design.md  requirements.md  tasks.md
specs/c-008-web-frontend/: design.md  requirements.md  tasks.md
specs/c-009-guardrails-ai/: design.md  requirements.md  tasks.md
specs/c-010-eval-hardening/: design.md  requirements.md  tasks.md
specs/c-011-web-supply-ingest/: design.md  requirements.md  tasks.md
specs/dspy-compile/: design.md  requirements.md  tasks.md
tests/: conftest.py  test_cli.py  test_config_enrich.py  test_models.py
tests/cli/: test_candidate_store.py  test_explain.py  test_ingest_cli.py  test_ingest_incremental.py  test_match_e2e.py  test_match_query.py  test_no_match.py  test_orchestrator.py  test_render_identities.py  test_score_pii_wiring.py  test_store.py
tests/docs/: frozen_contract.schema.json  test_decisions_status.py  test_doc_invariants.py  test_frozen_contract.py
tests/eval/: conftest.py  test_fairness.py  test_faithfulness.py  test_guardrail_validation.py  test_guardrails_live.py  test_invariants.py  test_live_smoke.py  test_nl_intake.py  test_red_team.py  test_retrieval_quality.py  test_signatures.py
tests/fixtures/: __init__.py  golden_set.json  guardrail_corpus.json  injection_corpus.json  nl_intake_golden.json
tests/fixtures/cassettes/ROLE-01/: clarify.json  score.json
tests/fixtures/cassettes/ROLE-02/: clarify.json  score.json
tests/fixtures/cassettes/ROLE-03/: clarify.json  score.json
tests/fixtures/ingest/: beach.csv  feedback_multi.md  feedback_nokey.md  feedback_single.md  malformed.csv  no_banner.csv  quoted.csv  supply_beach_real.csv
tests/guardrails/: test_grounding_pii.py  test_imports.py  test_input_guard.py  test_narrative_guard.py  test_output_guard.py
tests/index/: fakes.py  test_build.py  test_cli_index.py  test_embed_client.py  test_index_models.py  test_indexer.py  test_milvus_store.py  test_modal_smoke.py  test_retrieve.py  test_retrieve_recall.py  test_retrieve_rerank.py  test_text_builder.py
tests/ingest/: test_blobstore.py  test_enrich.py  test_enrich_cache.py  test_enrich_gold_e2e.py  test_gold_models.py  test_goldstore.py  test_land.py  test_land_parse_e2e.py  test_lineage.py  test_lineage_metrics.py  test_manifest.py  test_merge.py  test_models.py  test_parsing.py  test_real_data_smoke.py  test_reconcile.py  test_rows.py  test_sheets.py  test_silver_e2e.py  test_silver_helpers.py  test_silver_normalize.py  test_silver_run.py  test_silver_store.py  test_taxonomy.py
tests/ingest/parse/: test_csv.py  test_markdown.py  test_pdf.py
tests/match/: test_clarify.py  test_demand.py  test_freshness.py  test_gates.py  test_intake.py  test_match_models.py  test_rank.py  test_score.py
tests/pii/: test_leakscan.py  test_pseudonymised_lm.py  test_redact.py  test_vault.py
tests/web/: test_app.py  test_imports.py  test_parity.py  test_supply.py
(+4 files in other folders)
