[project]
name = "staffer"
version = "0.1.0"
description = "Demand-Supply Matcher — staffing decision engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "dspy>=2.0",
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
    "pymilvus",
    "typer",
    "docling",
    "sentence-transformers",
    "modal",
    "httpx",
    "pyyaml>=6.0",
    "structlog",
]

[project.scripts]
dsm = "dsm.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pyright",
    "ruff",
    "import-linter",
    "promptfoo",
    "deepeval",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.importlinter]
root_packages = ["dsm"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Gates must not depend on PII, index, or LLM code"
type = "forbidden"
source_modules = ["dsm.match.gates"]
forbidden_modules = ["dsm.pii", "dsm.index", "dspy", "modal", "httpx"]

[[tool.importlinter.contracts]]
name = "No direct LLM provider access — use PseudonymisedLM"
type = "forbidden"
source_modules = ["dsm.match", "dsm.ingest"]
forbidden_modules = ["modal", "httpx"]

[[tool.importlinter.contracts]]
name = "Ingest must not depend on match, index, pii, or LLM code"
type = "forbidden"
source_modules = ["dsm.ingest"]
forbidden_modules = ["dsm.match", "dsm.index", "dsm.pii", "dspy", "modal", "httpx"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dsm"]
