[project]
name = "staffer"
version = "0.1.0"
description = "Demand-Supply Matcher — staffing decision engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "dspy>=2.0",
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
    "pymilvus",
    "typer",
    "docling",
    "sentence-transformers",
    "modal",
    "httpx",
    "pyyaml>=6.0",
    "structlog",
    "milvus-lite>=3.0",
]

[project.scripts]
dsm = "dsm.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pyright",
    "ruff",
    "import-linter",
    "deepeval",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.importlinter]
root_packages = ["dsm"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Gates must not depend on PII, index, or LLM code"
type = "forbidden"
source_modules = ["dsm.match.gates"]
forbidden_modules = ["dsm.pii", "dsm.index", "dspy", "modal", "httpx"]

[[tool.importlinter.contracts]]
name = "No direct LLM provider access — use PseudonymisedLM"
type = "forbidden"
source_modules = ["dsm.match", "dsm.ingest"]
forbidden_modules = ["modal", "httpx"]

# AD-078: ingest may import dspy (typed DSPy signatures) and the dsm.pii boundary
# (redact/leakscan/pseudonymised_lm/vault) — enrich is the first LLM call site and must
# route THROUGH PseudonymisedLM. It stays forbidden from match/index and from any direct
# provider access (modal/httpx — see the "No direct LLM provider access" contract above).
# Supersedes the AD-076 "ingest may use only dsm.pii.vault" narrowing.
[[tool.importlinter.contracts]]
name = "Ingest must not depend on match or index"
type = "forbidden"
source_modules = ["dsm.ingest"]
forbidden_modules = ["dsm.match", "dsm.index"]

# AD-091: the query plane (match + index) must not depend on ingest — the serving side is
# read-only over the Milvus store + the CandidateStore port, never the gold/ingest internals.
# Exempt: (1) dsm.cli (the composition root — builds the GoldCandidateStore adapter); (2) the
# index BUILD edge — dsm.index.build / indexer / text_builder consume GoldCandidate at `dsm index`
# write-time. These three build modules are ignored explicitly (R-1); the query-time read path
# (dsm.index.models / retrieve / milvus_store / embed_client) carries no ingest import.
[[tool.importlinter.contracts]]
name = "Match and index must not depend on ingest"
type = "forbidden"
source_modules = ["dsm.match", "dsm.index"]
forbidden_modules = ["dsm.ingest"]
ignore_imports = ["dsm.index.build -> dsm.ingest.models", "dsm.index.indexer -> dsm.ingest.models", "dsm.index.text_builder -> dsm.ingest.models"]

[tool.pytest.ini_options]
markers = [
    "eval_offline: deterministic eval (cassette LM, no network, no keys) — Tier 1/2 (AD-094)",
    "eval_live: live eval (needs API keys; skipif absent) — Tier 3 (AD-094)",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dsm"]
